# Original_Idea

./: .gitignore  CMakeLists.txt  LICENSE  config.h  game.cpp  game.h  inv.cpp  inv.h  main.cpp  npc.cpp  npc.h  player.cpp  player.h  second_projectile.h
include/: base_projectile.h  config.h  first_projectile.h  game.h  keybindings.h  npc.h  player.h  resource_manager.h  second_projectile.h
source/: first_projectile.cpp  game.cpp  main.cpp  npc.cpp  player.cpp  second_projectile.cpp
src/: first_projectile.cpp  game.cpp  keybindings.cpp  main.cpp  npc.cpp  player.cpp  resource_manager.cpp  second_projectile.cpp
